--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   // Theme
-  "workbench.colorTheme": "Dracula",
+  //"workbench.colorTheme": "learn-with-sumit-theme",
 
   // config related to code formatting
   "editor.defaultFormatter": "esbenp.prettier-vscode",
